Changes to be committed: 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/api/services/user.service.ts 	modified:   src/app/app.module.ts 	modified:   src/app/main-page/main-page.component.css 	modified:   src/app/main-page/main-page.component.html 	modified:   src/app/profile-page/profile-page.component.css 	modified:   src/app/profile-page/profile-page.component.html 	modified:   src/app/profile-page/profile-page.component.ts 	modified:   src/app/top-bar/top-bar.component.html 	modified:   src/environments/environment.ts 	modified:   src/models/User.ts 	modified:   src/models/UserForPFP.ts
 Untracked files:
	src/assets/defaul-img.jpg

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -21,10 +21,14 @@
     </div>
     <div class="row">
         <div class="row d-flex" *ngFor="let item of chunked">
-            <div class="col" *ngFor="let i of item">
-                <div>
-                    <h3>{{i.name}}</h3>
-                    <p>{{i.tagsIds}}</p>
+            <div class="col my-2" *ngFor="let i of item">
+                <div class="card">
+                    <img class="card-img-top" src="../../assets/defaul-img.jpg">
+                    <div class="card-body">
+                        
+                        <h3>{{i.name}}</h3>
+                        <p>{{i.tagsIds}}</p>
+                    </div>
                 </div>
             </div>
             
