--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -15,12 +15,12 @@
                     </li>
                 <li class="nav-item mx-4">
                     <a class="nav-link text-white" >ABOUT</a>
-                    </li>
-                <li class="nav-item mx-4">
-                    <a class="nav-link text-white" >MOVIE</a>
                 </li>
+                <!-- <li class="nav-item mx-4">
+                    <a class="nav-link text-white" >MOVIE</a>
+                </li> -->
                 <li class="nav-item mx-4">
-                    <a class="nav-link text-white" >HOME</a>
+                    <a class="nav-link text-white" [routerLink]="['/']">HOME</a>
                 </li>
             </ul>
         </div>
