--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -6,3 +6,8 @@
     border: solid .3px;
     border-color: black;
 }
+.card{
+    max-height: 350px;
+    min-height: 350px;
+    max-width: 230px;
+}
