--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -5,14 +5,14 @@
             <div class="row">
                 <div class="col-sm-3" style="min-width: 180px; max-width: 180px;">
                     <div class="col-sm d-flex justify-content-center" >
-                        <img  src="https://localhost:5001/api/User/GetImage/1" style="width: 180px; height: 180px;">
+                        <img  src="https://localhost:5001/api/User/GetImage/{{user?.link}}" style="width: 180px; height: 180px;">
                         <!-- <img [ngIf]="user?.avatar !== undefined"> -->
                         <!-- <a *ngIf="edit" href="#" class="stretched-link" style="position: relative;"></a> -->
                         
                     </div>
                     <div class="d-flex justify-content-center my-2" *ngIf="user?.isOwned">
                         <button class="btn-primary btn-pfp" (click)="editMode()" >Edit profile</button>
-                        <button class="btn-primary btn-pfp">Sign out</button>
+                        <button class="btn-primary btn-pfp" (click)="signOut()">Sign out</button>
                     </div>
                 </div>
                 <div class="col my-2">
